--- a/src/main/webapp/template/page/pages-profile.html
+++ b/src/main/webapp/template/page/pages-profile.html
@@ -185,8 +185,8 @@
                         <h5 class="card-title">Biểu đồ thống kê cảm xúc các âm thanh được thêm</h5>
                     </div>
                     <div class="card-body">
-                        <div class="chart chart-sm">
-                            <canvas id="chartjs-doughnut"></canvas>
+                        <div class="chart chart-sm" >
+                            <canvas id="chartjs-doughnut" style="height: 250px;width: 250px;"></canvas>
                         </div>
                     </div>
                 </div>
