--- a/src/main/webapp/template/element/header.html
+++ b/src/main/webapp/template/element/header.html
@@ -6,17 +6,11 @@
         </a>
         <ul class="sidebar-nav">
             <li class="sidebar-header">
-                Setting, tools
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="/">
-                    <i class="align-middle" data-feather="sliders"></i> <span
-                        class="align-middle">Dashboard</span>
-                </a>
+                Charts & Dashboard
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" href="/profile">
-                    <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
+                    <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
                 </a>
             </li>
             <li class="sidebar-header">
