--- a/src/main/webapp/template/page/login.html
+++ b/src/main/webapp/template/page/login.html
@@ -71,7 +71,7 @@
                     </a>
 
                     <!-- Google -->
-                    <a style="color: #c5d6ef;" href="#!" role="button">
+                    <a style="color: #c5d6ef;" href="https://github.com/subin174/DATN-diary" role="button">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
 
