--- a/src/main/webapp/template/page/user-detail.html
+++ b/src/main/webapp/template/page/user-detail.html
@@ -18,7 +18,7 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <!-- MDB -->
-    <link rel="stylesheet" href="css/mdb.min.css" />
+    <link rel="stylesheet" href="css/mdb.min.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" href="img/icons/icon-48x48.png"/>
 
@@ -73,7 +73,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="/charts">
+                    <a class="sidebar-link" href="/diary-manager">
                         <i class="align-middle" data-feather="book"></i> <span
                             class="align-middle">Diary management</span>
                     </a>
@@ -250,7 +250,8 @@
 
                         <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
                             <img id="avatarImage2" class="avatar img-fluid rounded me-1" alt="Charles Hall"/>
-                            <span id="username2" class="align-middle " style="font-style: normal;font-weight: bold;">222</span>
+                            <span id="username2" class="align-middle "
+                                  style="font-style: normal;font-weight: bold;">222</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
@@ -275,9 +276,6 @@
 
                 <div class="mb-3">
                     <h1 class="h3 d-inline align-middle">Profile</h1>
-                    <a class="badge bg-dark text-white ms-2" href="upgrade-to-pro.html">
-                        Get more page examples
-                    </a>
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-xl-3">
@@ -297,47 +295,55 @@
                                 <ul class="list-unstyled mb-0">
                                     <li class="mb-1"><span data-feather="mail" class="feather-sm me-1"></span> Email: <a
                                             href="#" id="email">Boston</a></li>
-                                    <li class="mb-1"><span data-feather="phone" class="feather-sm me-1"></span> Phone number: <a
-                                            href="#" id="phone">Boston</a></li>
-                                    <li class="mb-1"><span data-feather="calendar" class="feather-sm me-1"></span> Date: <a
-                                            href="#" id="date">Boston</a></li>
+                                    <li class="mb-1"><span data-feather="phone" class="feather-sm me-1"></span> Phone
+                                        number: <a
+                                                href="#" id="phone">Boston</a></li>
+                                    <li class="mb-1"><span data-feather="calendar" class="feather-sm me-1"></span> Date:
+                                        <a
+                                                href="#" id="date">Boston</a></li>
                                 </ul>
                             </div>
                         </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    <h5 class="card-title">Pie Chart</h5>
-                                    <h6 class="card-subtitle text-muted">Biều đồ tâm trạng người dùng</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="chart chart-sm">
-                                        <canvas id="chartjs-pie"></canvas>
-                                    </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="card-title">Pie Chart</h5>
+                                <h6 class="card-subtitle text-muted">Biều đồ tâm trạng người dùng</h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="chart chart-sm">
+                                    <canvas id="chartjs-pie"></canvas>
                                 </div>
                             </div>
+                        </div>
                     </div>
 
-                    <div class="col-md-6 col-xl-6">
+                    <div class="col-md-8 col-xl-8">
                         <div class="card">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Activities</h5>
                             </div>
                         </div>
                         <div class="list-group">
-                            <div th:each="diary : ${diaries}" class="list-group-item">
+                            <div th:each="diary : ${diaries}" class="list-group-item diary-item-detail" th:id="${diary.id}">
                                 <div class="row g-0 align-items-center">
                                     <div class="col-1">
-                                        <img th:src="${diary.avatar}" class="avatar img-fluid rounded-circle" width="50" height="50" alt="User Avatar">
+                                        <img th:src="${diary.avatar}" class="avatar img-fluid rounded-circle" width="50"
+                                             height="50" alt="User Avatar">
                                     </div>
                                     <div class="col-4 inline-block-container">
                                         <div style="display: inline-block;">
-                                            <strong><div class="text-dark" th:text="${diary.nickname}"></div></strong>
+                                            <strong>
+                                                <div class="text-dark" th:text="${diary.nickname}"></div>
+                                            </strong>
                                         </div>
                                         feeling
                                         <div style="display: inline-block;">
-                                            <strong><div class="text-dark" th:text="${diary.mood}"></div></strong>
+                                            <strong>
+                                                <div class="text-dark" th:text="${diary.mood}"></div>
+                                            </strong>
                                         </div>
-                                        <div class="time-box text-muted small mt-1" th:attr="data-action-time=${diary.createdAt}">
+                                        <div class="time-box text-muted small mt-1"
+                                             th:attr="data-action-time=${diary.createdAt}">
                                             10p
                                         </div>
                                         <div class="text-nowrap bd-highlight" th:text="${diary.happened}"></div>
@@ -348,6 +354,34 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="card" style="max-height: 40%">
+                            <div class="row" style="margin-left: 10px; margin-top: 10px">
+                                <div class="user-avatar col-1">
+                                    <img class="avatar img-fluid rounded-circle diary-avatar"
+                                         width="50" height="50" alt="">
+                                </div>
+                                <div class="user-info inline-block-container col-10">
+                                    <div style="display: inline-block;">
+                                        <strong>
+                                            <div class="text-dark diary-nickname"></div>
+                                        </strong>
+                                    </div>
+                                    feeling
+                                    <div style="display: inline-block;">
+                                        <strong>
+                                            <div class="text-dark diary-mood"></div>
+                                        </strong>
+                                    </div>
+
+                                    <div class="text-muted small mt-1 diary-createdAt">
+                                        January 1, 2023 12:00:00 ago
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body detail">
+                            </div>
+
                         </div>
                     </div>
 
@@ -430,6 +464,7 @@
         return null;
     }
 </script>
+<script src="js/diary-manager.js"></script>
 
 </body>
 
