--- a/src/main/webapp/template/page/diary-manager.html
+++ b/src/main/webapp/template/page/diary-manager.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"/>
-    <!-- Font Awesome -->
     <link
             rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-    <!-- Google Fonts Roboto -->
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
 <main layout:fragment="content">
@@ -27,17 +25,18 @@
             <div class="col-md-6 col-xl-6">
                 <div class="card">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Activities</h5>
+                        <h5 class="card-title mb-0">Diary Public</h5>
                     </div>
                 </div>
-                <div class="overflow-scroll" style="max-height: 37%">
+                <div class="overflow-scroll" style="max-height: 45%">
                     <div class="list-group diary">
                         <div th:each="diary : ${diaries}" th:sortedby="${diary.createdAt}"
                              th:order="${'desc'}" class="list-group-item diary-item-detail" th:id="${diary.id}">
-                            <div class="d-flex align-items-start">
+                            <div class="d-flex align-items-start" data-bs-toggle="modal"
+                                 data-bs-target="#exampleModal">
                                 <img th:src="${diary.avatar}" class="rounded-circle me-2" width="50"
                                      height="50" alt="User Avatar">
-                                <div class="col-9 inline-block-container">
+                                <div class="inline-block-container">
                                     <div style="display: inline-block;">
                                         <strong>
                                             <div class="text-dark" th:text="${diary.nickname}"></div>
@@ -49,61 +48,115 @@
                                             <div class="text-dark" th:text="${diary.mood}"></div>
                                         </strong>
                                     </div>
+                                    level
+                                    <div style="display: inline-block;">
+                                        <strong>
+                                            <div class="text-dark" th:text="${diary.level}"></div>
+                                        </strong>
+                                    </div>
                                     <div class="text-muted small mt-1"
                                          th:text="${#temporals.format(T(java.time.LocalDateTime).parse(diary.createdAt, T(java.time.format.DateTimeFormatter).ISO_DATE_TIME), 'MMMM dd, yyyy h:mm a')}">
                                     </div>
 
                                     <div class="text-nowrap bd-highlight col-9" th:text="${diary.happened}"></div>
 
-                                    <!-- Assuming diary.createdAt is a LocalDateTime -->
+
 
                                     <div class="time-box text-muted small mt-1"
                                          th:attr="data-action-time=${diary.createdAt}">
                                         10p
                                     </div>
-                                </div>
-                                <div class="col-1" data-feather="trash-2" style="margin-top: 20px; margin-right: 10px">
+
+
+                                    <div class="modal fade" id="exampleModal" tabindex="-1"
+                                         aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Diary detail</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close" id="close2"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="card" style="max-height: 40%">
+                                                        <div class="row" style="margin-left: 10px; margin-top: 10px">
+                                                            <div class="user-avatar col-1">
+                                                                <img class="avatar img-fluid rounded-circle diary-avatar"
+                                                                     width="5px" height="5px" alt="User Avatar">
+                                                            </div>
+                                                            <div class="user-info inline-block-container col-10">
+                                                                <div style="display: inline-block;">
+                                                                    <strong>
+                                                                        <div class="text-dark diary-nickname"></div>
+                                                                    </strong>
+                                                                </div>
+                                                                feeling
+                                                                <div style="display: inline-block;">
+                                                                    <strong>
+                                                                        <div class="text-dark diary-mood"></div>
+                                                                    </strong>
+                                                                </div>
+                                                                level
+                                                                <div style="display: inline-block;">
+                                                                    <strong>
+                                                                        <div class="text-dark diary-level"></div>
+                                                                    </strong>
+                                                                </div>
+
+                                                                <div class="text-muted small mt-1 diary-createdAt">
+                                                                    January 1, 2023 12:00:00 ago
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div id="abc" class="card-body user">
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+<!--                                                        <div class="col-1" data-feather="trash-2"-->
+<!--                                                             style="margin-top: 20px; margin-right: 10px">-->
+<!--                                                        </div>-->
+                                                        <button type="button" class="btn btn-danger" id="delete" th:attr="data-diary-id=${diary.id}" th:onclick="|deleteEntity('${diary.id}')|">Delete</button>
+
+                                                        <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal" id="close">Close
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="col-md-6 col-xl-6">
-                <div class="card" style="max-height: 40%">
-                    <div class="row" style="margin-left: 10px; margin-top: 10px">
-                        <div class="user-avatar col-1">
-                            <img class="avatar img-fluid rounded-circle diary-avatar"
-                                 width="50" height="50" alt="">
-                        </div>
-                        <div class="user-info inline-block-container col-10">
-                            <div style="display: inline-block;">
-                                <strong>
-                                    <div class="text-dark diary-nickname"></div>
-                                </strong>
-                            </div>
-                            feeling
-                            <div style="display: inline-block;">
-                                <strong>
-                                    <div class="text-dark diary-mood"></div>
-                                </strong>
-                            </div>
-
-                            <div class="text-muted small mt-1 diary-createdAt">
-                                January 1, 2023 12:00:00 ago
-                            </div>
-                        </div>
+                <div class="card flex-fill w-100 rounded-6">
+                    <div class="card-header">
+                        <h5 class="card-title">Biểu đồ cảm xúc nhật ký công khai</h5>
                     </div>
                     <div class="card-body">
+                        <div class="chart">
+                            <canvas id="chartjs-line-3"></canvas>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
-    </div>
+        <script>
+            var myModal = document.getElementById('myModal')
+            var myInput = document.getElementById('myInput')
 
-    <script src="js/diary-manager.js"></script>
+            myModal.addEventListener('shown.bs.modal', function () {
+                myInput.focus()
+            })
+        </script>
+        <script src="js/diary-manager.js"></script>
+    </div>
 </main>
 </body>
 </html>
