--- a/src/main/webapp/template/page/diary-manager.html
+++ b/src/main/webapp/template/page/diary-manager.html
@@ -147,14 +147,14 @@
                 </div>
             </div>
         </div>
-        <script>
-            var myModal = document.getElementById('myModal')
-            var myInput = document.getElementById('myInput')
+<!--        <script>-->
+<!--            var myModal = document.getElementById('myModal')-->
+<!--            var myInput = document.getElementById('myInput')-->
 
-            myModal.addEventListener('shown.bs.modal', function () {
-                myInput.focus()
-            })
-        </script>
+<!--            myModal.addEventListener('shown.bs.modal', function () {-->
+<!--                myInput.focus()-->
+<!--            })-->
+<!--        </script>-->
         <script src="js/diary-manager.js"></script>
     </div>
 </main>
