--- a/src/main/webapp/template/page/login.html
+++ b/src/main/webapp/template/page/login.html
@@ -19,6 +19,10 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.2/dist/sweetalert2.min.css">
+
+    <!-- Include SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.2/dist/sweetalert2.all.min.js"></script>
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <link rel="stylesheet" href="css/login2.css" />
@@ -156,5 +160,6 @@
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/auth.js"></script>
 <script type="text/javascript"></script>
+
 </body>
 </html>
